tests/errors/fixed_form_4.f
      program X
      integer :: y
      y = 5
500   print *, sin), y
      print *, "OK"
      end program
